fix styles.css nav container fluid overflow

--- a/styles.css
+++ b/styles.css
@@ -58,11 +58,11 @@ span.small{
     box-sizing: border-box;
     text-align: center;
     font-family: "Times New Roman", Georgia, Garamond, serif;
-    position: relative;
-    top: 50%;
-    right:25%;
+    padding: 15% 15%;
+    position: initial;
+    width: 65%;
+    float: left;
     color: #dfb6b2;
-    margin: 15%;
 
 }
 div.hero > h1 {
@@ -196,6 +196,7 @@ div.hero > p {
     width: 100%;
 }
 nav {
+    position:sticky;
     width: 100%;
     height: auto;
     padding-top: 5px;
